-
Bug
-
Resolution: Done
-
P4: Low
-
6.5
-
None
-
-
d85dff3775 (qt/qtbase/dev) d85dff3775 (qt/tqtc-qtbase/dev) f8d0dd40db (qt/tqtc-qtbase/6.2) 272a693950 (qt/qtbase/6.3) 272a693950 (qt/tqtc-qtbase/6.3) b601eb7dab (qt/qtbase/6.4) b601eb7dab (qt/tqtc-qtbase/6.4)
On x86 with current dev (a9cabed439), qtbase fails with:
[ 946s] In file included from /home/abuild/rpmbuild/BUILD/qtbase-everywhere-src-6.5.0~git/src/gui/painting/qcompositionfunctions.cpp:7: [ 946s] /home/abuild/rpmbuild/BUILD/qtbase-everywhere-src-6.5.0~git/src/gui/painting/qrgba64_p.h: In function 'T multiplyAlpha255(T, uint) [with T = QRgba64]': [ 946s] /home/abuild/rpmbuild/BUILD/qtbase-everywhere-src-6.5.0~git/src/gui/painting/qrgba64_p.h:85:35: error: calling 'T multiplyAlpha255(T, uint) [with T = QRgba64]' with attribute sseregparm without SSE/SSE2 enabled [ 946s] 85 | static inline T Q_DECL_VECTORCALL multiplyAlpha255(T rgba64, uint alpha255) [ 946s] | ^~~~~~~~~~~~~~~~
The last update (6 days ago) built successfully.
No issue on the other archs tested (x86_64, armv7l, aarch, powerPC)
CMake summary:
[ 153s] Building for: linux-g++ (i386, CPU features: ) [ 153s] Compiler: gcc 12.1.0 [ 153s] Build options: [ 153s] Mode ................................... release (with debug info) [ 153s] Optimize release build for size ........ no [ 153s] Fully optimize release builds (-O3) .... no [ 153s] Building shared libraries .............. yes [ 153s] Using C standard ....................... C11 [ 153s] Using C++ standard ..................... C++17 [ 153s] Using ccache ........................... no [ 153s] Using new DTAGS ........................ yes [ 153s] Generating GDB index ................... no [ 153s] Relocatable ............................ no [ 153s] Using precompiled headers .............. no [ 153s] Using LTCG ............................. yes [ 153s] Using Intel CET ........................ no [ 153s] Target compiler supports: [ 153s] x86 Intrinsics ....................... Basic VAES AVX512VBMI2 [ 153s] Sanitizers: [ 153s] Addresses ............................ no [ 153s] Threads .............................. no [ 153s] Memory ............................... no [ 153s] Fuzzer (instrumentation only) ........ no [ 153s] Undefined ............................ no [ 153s] Build parts ............................ libs examples tools [ 153s] Qt modules and options: [ 153s] Qt Concurrent .......................... yes [ 153s] Qt D-Bus ............................... yes [ 153s] Qt D-Bus directly linked to libdbus .... yes [ 153s] Qt Gui ................................. yes [ 153s] Qt Network ............................. yes [ 153s] Qt PrintSupport ........................ yes [ 153s] Qt Sql ................................. yes [ 153s] Qt Testlib ............................. yes [ 153s] Qt Widgets ............................. yes [ 153s] Qt Xml ................................. yes [ 153s] Support enabled for: [ 153s] Using pkg-config ....................... yes [ 153s] udev ................................... yes [ 153s] Using system zlib ...................... yes [ 153s] Zstandard support ...................... yes [ 153s] Thread support ......................... yes [ 153s] Common build options: [ 153s] Linker can resolve circular dependencies yes [ 153s] Qt Core: [ 153s] backtrace .............................. yes [ 153s] DoubleConversion ....................... yes [ 153s] Using system DoubleConversion ........ yes [ 153s] GLib ................................... yes [ 153s] ICU .................................... yes [ 153s] Using system libb2 ..................... yes [ 153s] Built-in copy of the MIME database ..... yes [ 153s] cpp/winrt base ......................... no [ 153s] Tracing backend ........................ <none> [ 153s] Logging backends: [ 153s] journald ............................. yes [ 153s] syslog ............................... no [ 153s] slog2 ................................ no [ 153s] PCRE2 .................................. yes [ 153s] Using system PCRE2 ................... yes [ 153s] CLONE_PIDFD support in forkfd .......... yes [ 153s] Qt Sql: [ 153s] SQL item models ........................ yes [ 153s] Qt Network: [ 153s] getifaddrs() ........................... yes [ 153s] IPv6 ifname ............................ yes [ 153s] libproxy ............................... yes [ 153s] Linux AF_NETLINK ....................... yes [ 153s] OpenSSL ................................ yes [ 153s] Qt directly linked to OpenSSL ........ yes [ 153s] OpenSSL 1.1 ............................ yes [ 153s] DTLS ................................... yes [ 153s] OCSP-stapling .......................... yes [ 153s] SCTP ................................... no [ 153s] Use system proxies ..................... yes [ 153s] GSSAPI ................................. yes [ 153s] Brotli Decompression Support ........... yes [ 153s] qTopLevelDomain() ...................... yes [ 153s] Built-in publicsuffix database ....... yes [ 153s] System publicsuffix database ......... yes [ 153s] Core tools: [ 153s] Android deployment tool ................ yes [ 153s] macOS deployment tool .................. no [ 153s] Windows deployment tool ................ no [ 153s] qmake .................................. yes [ 153s] Qt Gui: [ 153s] Accessibility .......................... yes [ 153s] FreeType ............................... yes [ 153s] Using system FreeType ................ yes [ 153s] HarfBuzz ............................... yes [ 153s] Using system HarfBuzz ................ yes [ 153s] Fontconfig ............................. yes [ 153s] Image formats: [ 153s] GIF .................................. yes [ 153s] ICO .................................. yes [ 153s] JPEG ................................. yes [ 153s] Using system libjpeg ............... yes [ 153s] PNG .................................. yes [ 153s] Using system libpng ................ yes [ 153s] Text formats: [ 153s] HtmlParser ........................... yes [ 153s] CssParser ............................ yes [ 153s] OdfWriter ............................ yes [ 153s] MarkdownReader ....................... yes [ 153s] Using system libmd4c ............... no [ 153s] MarkdownWriter ....................... yes [ 153s] EGL .................................... yes [ 153s] OpenVG ................................. no [ 153s] OpenGL: [ 153s] Desktop OpenGL ....................... yes [ 153s] OpenGL ES 2.0 ........................ no [ 153s] OpenGL ES 3.0 ........................ no [ 153s] OpenGL ES 3.1 ........................ no [ 153s] OpenGL ES 3.2 ........................ no [ 153s] Vulkan ................................. yes [ 153s] Session Management ..................... yes [ 153s] Features used by QPA backends: [ 153s] evdev .................................. yes [ 153s] libinput ............................... yes [ 153s] HiRes wheel support in libinput ........ yes [ 153s] INTEGRITY HID .......................... no [ 153s] mtdev .................................. yes [ 153s] tslib .................................. yes [ 153s] xkbcommon .............................. yes [ 153s] X11 specific: [ 153s] XLib ................................. yes [ 153s] XCB Xlib ............................. yes [ 153s] EGL on X11 ........................... yes [ 153s] xkbcommon-x11 ........................ yes [ 153s] xcb-sm ............................... yes [ 153s] QPA backends: [ 153s] DirectFB ............................... no [ 153s] EGLFS .................................. yes [ 153s] EGLFS details: [ 153s] EGLFS OpenWFD ........................ no [ 153s] EGLFS i.Mx6 .......................... no [ 153s] EGLFS i.Mx6 Wayland .................. no [ 153s] EGLFS RCAR ........................... no [ 153s] EGLFS EGLDevice ...................... yes [ 153s] EGLFS GBM ............................ yes [ 153s] EGLFS VSP2 ........................... no [ 153s] EGLFS Mali ........................... no [ 153s] EGLFS Raspberry Pi ................... no [ 153s] EGLFS X11 ............................ yes [ 153s] LinuxFB ................................ yes [ 153s] VNC .................................... yes [ 153s] VK_KHR_display ......................... yes [ 153s] QNX: [ 153s] lgmon ................................ no [ 153s] IMF .................................. no [ 153s] XCB: [ 153s] Using system-provided xcb-xinput ..... yes [ 153s] GL integrations: [ 153s] GLX Plugin ......................... yes [ 153s] XCB GLX .......................... yes [ 153s] EGL-X11 Plugin ..................... yes [ 153s] Windows: [ 153s] Direct 2D ............................ no [ 153s] Direct 2D 1.1 ........................ no [ 153s] DirectWrite .......................... no [ 153s] DirectWrite 3 ........................ no [ 153s] Qt Widgets: [ 153s] GTK+ ................................... yes [ 153s] Styles ................................. Fusion Windows [ 153s] Qt Testlib: [ 153s] Tester for item models ................. yes [ 153s] Qt PrintSupport: [ 153s] CUPS ................................... yes [ 153s] Qt Sql Drivers: [ 153s] DB2 (IBM) .............................. no [ 153s] InterBase .............................. no [ 153s] MySql .................................. yes [ 153s] OCI (Oracle) ........................... no [ 153s] ODBC ................................... yes [ 153s] PostgreSQL ............................. yes [ 153s] SQLite ................................. yes [ 153s] Using system provided SQLite ......... yes
CMake command line and log attached
cc allan.jensen
| For Gerrit Dashboard: QTBUG-104726 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 420103,2 | Remove Q_DECL_VECTORCALL when SSE2 is not available | dev | qt/qtbase | Status: MERGED | +2 | 0 |
| 420251,2 | Remove Q_DECL_VECTORCALL when SSE2 is not available | 6.4 | qt/qtbase | Status: MERGED | +2 | 0 |
| 420252,2 | Remove Q_DECL_VECTORCALL when SSE2 is not available | 6.3 | qt/qtbase | Status: MERGED | +2 | 0 |
| 420318,2 | Remove Q_DECL_VECTORCALL when SSE2 is not available | tqtc/lts-6.2 | qt/tqtc-qtbase | Status: MERGED | +2 | 0 |