Remove Q_DECL_VECTORCALL when SSE2 is not available

It expands to sseregparm in gcc, and then can't build with SSE2
disabled.

Fixes: QTBUG-104726
Change-Id: I063ed87ed7f7ba683a19cd3f6e8a25c5111ef72a
Reviewed-by: Thiago Macieira <thiago.macieira@intel.com>
(cherry picked from commit d85dff3775b00dde079c50bcf417cae5ed884512)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>